# Clarion-The-Accessibility-Companion-for-Slack

./: .editorconfig  .env.example  .env.sample  .gitignore  ACTION_PLAN.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_SCRIPT.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUBMISSION.md  SUPPORT.md  agent.py  app.py  app_oauth.py  config.py  docker-compose.yml  manifest.json  pyproject.toml  requirements.txt  rts_client.py  slack_mcp.py  test_stream.py  thread_context.py  tools.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: accessibility_issue.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.slack_backup/: config.json  hooks.json
clarion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: API.md  Accessibility.md  Architecture.md  Deployment.md  DeveloperGuide.md  FAQ.md  Troubleshooting.md
listeners/: __init__.py  _stream.py
listeners/actions/: __init__.py
listeners/events/: __init__.py  app_home_opened.py  app_mentioned.py  message.py
listeners/shortcuts/: __init__.py
listeners/views/: __init__.py  feedback_builder.py  home.py
tests/: __init__.py  conftest.py  test_config.py  test_thread_context.py  test_tools.py
