[project]
name = "clarion"
version = "1.0.0"
description = "AI-powered accessibility companion that makes Slack more inclusive for everyone."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Clarion Contributors" }]
keywords = [
    "slack",
    "accessibility",
    "ai",
    "nlp",
    "plain-language",
    "a11y",
    "bot",
    "inclusion",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "slack-bolt>=1.28.0",
    "slack-sdk>=3.36.0",
    "slack-cli-hooks<1.0.0",
    "openai>=1.0.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
    "types-requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/HARJAPAN2005/Clarion-The-Accessibility-Companion-for-Slack"
Documentation = "https://github.com/HARJAPAN2005/Clarion-The-Accessibility-Companion-for-Slack/tree/main/docs"
Repository = "https://github.com/HARJAPAN2005/Clarion-The-Accessibility-Companion-for-Slack.git"
Issues = "https://github.com/HARJAPAN2005/Clarion-The-Accessibility-Companion-for-Slack/issues"
Changelog = "https://github.com/HARJAPAN2005/Clarion-The-Accessibility-Companion-for-Slack/blob/main/CHANGELOG.md"

[tool.slack]
# Entry points the Slack CLI can run:
#   slack run              → Socket Mode  (app.py)
#   slack run app_oauth.py → HTTP + OAuth (enables the Slack MCP Server)
main = "app.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["listeners*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["agent", "tools", "thread_context", "rts_client", "slack_mcp", "listeners", "clarion"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
